# ZZ1

./: README.md
cours/: systèmes d'exploitation
tp/C/: tp7.c  tp7.h
tp/SSD/TP3/: squelettesCodeTP3.zip:Zone.Identifier
tp/SSD/TP3/squelettes/: base.c  listes  listes.c  mainSDL.c  romains  romains.c  sierpinski.c
tp/SSD/TP4/: tp4.zip:Zone.Identifier
tp/SSD/TP4/tp4/: arbre.c  codage.c  huffman.c  main
tp/SSD/tp5/: fichiers-squelettes-pour-etudiants.zip:Zone.Identifier
tp/SSD/tp5/__MACOSX/fichiers-squelettes-pour-etudiants/: ._main.c
tp/SSD/tp5/fichiers-squelettes-pour-etudiants/: avl.c
tp/bdd/tp2/: BDVins_queries.sql
tp/optinonlin/: fonctionunimodale.py
tp/optinonlin/tp3/: tp.ipynb  tp3.py
tp/os/: tp0.txt
tp/os/tp2/: exclamation.sh  numcat.sh  rotate.sh  swap.sh  test.txt  tri.sh
tp/os/tp3/tp3-master/: .gitignore  CMakeLists.txt  README.md
tp/os/tp3/tp3-master/include/: utils.h
tp/os/tp3/tp3-master/src/: main.c
tp/os/tp3/tp3-master/workingdir/images/: chien.jpg:Zone.Identifier
tp/sdd/TP3/squelettes/: base  dames.c  listes_tests.c
tp/sdd/TP4/tp4/: codage.c  huffman.c  main  main.c
tp/sdd/tp5/__MACOSX/fichiers-squelettes-pour-etudiants/: ._avl.c  ._avl.h  (+2 more)
tp/sdd/tp5/fichiers-squelettes-pour-etudiants/: avl.c  bst.c  main  main.c
tp/sdd/tp7/fichiers-squelettes-pour-etudiants/: bTree.c  bTree.h
tp/sdd/tp8/__MACOSX/: ._fichiers-squelettes-pour-etudiants
tp/sdd/tp8/fichiers-squelettes-pour-etudiants/: main  record.c
tp/sdd/tp9/fichiers-squelette-pour-étudiants/: linkedlist.c  main  main.c  main.c:Zone.Identifier
tp/squelettes/: base.c  listes  listes.c  listes_tests.c
(+3 files in other folders)
